--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,6 @@
 /prog01.pdf
 /prog02.pdf
 /prog03.pdf
-/prog01
-/prog02
 /csc450lib/SDK/Applications/Prog01/prog01
 /csc450lib/SDK/Applications/Prog02/prog02
+/csc450lib/SDK/Applications/Prog03/prog03
