ignore ide files

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@
 /csc450lib/SDK/Applications/Prog01/prog01
 /csc450lib/SDK/Applications/Prog02/prog02
 /csc450lib/SDK/Applications/Prog03/prog03
+/.vscode
