Setup for final program

--- a/.gitignore
+++ b/.gitignore
@@ -9,4 +9,5 @@
 /csc450lib/SDK/Applications/Prog01/prog1
 /csc450lib/SDK/Applications/Prog02/prog2
 /csc450lib/SDK/Applications/Prog03/prog3
+/csc450lib/SDK/Applications/Prog04/prog4
 /.vscode
