--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,5 @@
 /Shared Ptr
-/MMA Files/A1
-/MMA Files/A2
-/MMA Files/A3
+/MMA Files
 /ballCollisionProblem.pdf
 /bouncingBall.pdf
 /finalProject.pdf
